--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
   of Cambridge and the open-source community.
   </p>
 
+  <p>To keep track of the project, follow <a href="https://twitter.com/lowRISC">@lowRISC</a> or join our 
+  announcements list by entering your email below:</p>
+
+    <form class="pure-form" action="http://subscribe.lowrisc.org/subscribe" method="post">
+      <input name="email" type="email" placeholder="Enter your email address" required>
+      <button type="submit" class="pure-button pure-button-primary">Submit</button>
+    </form>
+
   <h3>The Team</h3>
   <ul>
     <li>Robert Mullins - Computer Laboratory, University of Cambridge, co-founder of Raspberry Pi</li>
