add link to job advert

--- a/index.html
+++ b/index.html
@@ -109,7 +109,9 @@
   <h3>Careers</h3>
   <p>
   We are currently hiring. Two new positions are available at the Computer
-  Laboratory, University of Cambridge.
+  Laboratory, University of Cambridge. For more details, <a 
+    href="http://www.jobs.cam.ac.uk/job/4665/">see the job advert</a>. 
+  Applications close on the 9th September 2014.
   </p>
 
   <h3>Contact us at info@lowrisc.org</h3>
