--- a/index.html
+++ b/index.html
@@ -61,8 +61,12 @@
 
 <body>
   <div class="header">
+      <img src="logo-med.gif" align="middle">
+	<p>
+<!--
     <h1>lowRISC</h1>
     <h2>Open to the core</h2>
+-->
   </div>
   <div class="content">
   <p>
