--- a/index.html
+++ b/index.html
@@ -113,10 +113,17 @@
   <h3 id="faq">FAQ</h3>
   <h4>Are you hiring?</h4>
   <p>
+  The closing date for the first round of applications has recently closed. We 
+  will hopefully have new positions available soon, please feel free to send
+  CVs to info@lowrisc.org .
+
+<!--
   Yes, we are currently advertising two positions based in Cambridge, UK.
   For more details, <a 
     href="http://www.jobs.cam.ac.uk/job/4665/">see the job advert</a>. 
   Applications close on the 9th September 2014.
+-->
+
   </p>
   <h4>Are contract or remote working arrangements on offer?</h4>
   <p>
