add link to mailing list

--- a/index.html
+++ b/index.html
@@ -111,6 +111,12 @@
   </ul>
 
   <h3 id="faq">FAQ</h3>
+  <h4>Do you have a discussion list?</h4>
+  <p>
+  Yes, you can now <a 
+  href="http://listmaster.pepperfish.net/cgi-bin/mailman/listinfo/lowrisc-dev-lists.lowrisc.org">subscribe 
+  to lowrisc-dev</a> and view archives <a href="http://listmaster.pepperfish.net/pipermail/lowrisc-dev-lists.lowrisc.org/">here</a>.
+  </p>
   <h4>Are you hiring?</h4>
   <p>
   The closing date for the first round of applications has recently closed. We 
