add link to ORConf slides

--- a/index.html
+++ b/index.html
@@ -78,7 +78,9 @@
   Our open-source SoC (System-on-a-Chip)
   designs will be based on the 64-bit <a href="http://riscv.org/">RISC-V</a> instruction
   set architecture. Volume silicon manufacture is planned
-  as is a low-cost development board.
+  as is a low-cost development board. There are more details on our plans in <a 
+    href="https://speakerdeck.com/asb/lowrisc-a-first-look">these slides from 
+    a recent talk</a>
   </p>
   <p>
   lowRISC is a not-for-profit organisation working closely with the University
