add subscribe anchor

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
   of Cambridge and the open-source community.
   </p>
 
-  <p>To keep track of the project, follow <a href="https://twitter.com/lowRISC">@lowRISC</a> or join our 
+  <p id="subscribe">To keep track of the project, follow <a href="https://twitter.com/lowRISC">@lowRISC</a> or join our 
   announcements list by entering your email below:</p>
 
     <form class="pure-form" action="http://subscribe.lowrisc.org/subscribe" method="post">
