add link to lowRISC memo page

--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
   lowRISC is a not-for-profit organisation working closely with the University
   of Cambridge and the open-source community.
   </p>
+  <p><b>Dec 2014:</b> We have now released a document describing our plans for <a 
+    href="http://www.lowrisc.org/docs/memo-2014-001-tagged-memory-and-minion-cores/">tagged 
+    memory and minion cores in the lowRISC SoC</a>.
+  </p>
 
   <p id="subscribe">To keep track of the project, follow <a href="https://twitter.com/lowRISC">@lowRISC</a> or join our 
   announcements list by entering your email below:</p>
