add link to gsoc 2015 ideas page

--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
   lowRISC is a not-for-profit organisation working closely with the University
   of Cambridge and the open-source community.
   </p>
+  <p><b>Mar 2015:</b> We are excited to announce we are taking part in the <a href="https://developers.google.com/open-source/soc/">Google Summer of Code</a> 2015.
+  See our <a href="http://www.lowrisc.org/docs/gsoc-2015-ideas/">ideas list</a> for a wide range of projects in different languages and covering 
+  pretty much every level of the hardware/software stack.
+  </p>
   <p><b>Dec 2014:</b> We have now released a document describing our plans for <a 
     href="http://www.lowrisc.org/docs/memo-2014-001-tagged-memory-and-minion-cores/">tagged 
     memory and minion cores in the lowRISC SoC</a>.
