--- a/community/index.html
+++ b/community/index.html
@@ -95,7 +95,7 @@
 <ul>
 <li>Checking the <a href="blog">http://www.lowrisc.org</a>, and subscribing to the <a href="http://localhost:1313/index.xml">RSS
 feed</a>.</li>
-<li>Signing up to our <a href="http://localhost:1313/about/">announcement mailing list</a>.</li>
+<li>Signing up to our <a href="http://www.lowrisc.org/about/">announcement mailing list</a>.</li>
 <li>Following <a href="https://twitter.com/lowrisc">@lowRISC on Twitter</a>.</li>
 </ul>
 
