add links to parent page for tutorial docs

--- a/about/index.html
+++ b/about/index.html
@@ -75,6 +75,7 @@
         <div class="row">
             <div class="sixteen columns">
                 <article class="li-article">
+                
                     <header class="li-article-header">
                         <h1 class="li-article-title">About lowRISC</h1>
                         <span class="li-article-taxonomies">
@@ -95,8 +96,9 @@
 <p>Our open-source SoC (System-on-a-Chip)
   designs will be based on the 64-bit <a href="http://riscv.org/">RISC-V</a> instruction
   set architecture. Volume silicon manufacture is planned
-  as is a low-cost development board. There are more details on our plans in <a href="https://speakerdeck.com/asb/lowrisc-a-first-look">these slides from
-    a recent talk</a></p>
+  as is a low-cost development board. There are more details on our plans in
+    <a href="https://speakerdeck.com/asb/lowrisc-the-path-to-an-open-source-soc">these slides from a recent
+    talk</a></p>
 
 <p>lowRISC is a not-for-profit organisation working closely with the University
   of Cambridge and the open-source community.</p>
