minor live-blog update

--- a/index.html
+++ b/index.html
@@ -157,6 +157,15 @@ blog of talks and announcements throughout the day.</p>
 
 <h2 id="introductions-and-welcome-krste-asanović:1198e896ab6f8fa7b8bfab04cfcd8c73">Introductions and welcome: Krste Asanović</h2>
 
+<ul>
+<li>The beginning of Krste&rsquo;s talk will be familiar for anyone who&rsquo;s seen an
+introduction to RISC-V before. Pleasingly, there are a lot of new faces here
+at the workshop so the introduction of course makes a lot of sense.</li>
+<li>Although the core RISC-V effort is focused on the ISA specification, there
+is interest in looking to expand this to look at how to standardise access to
+I/O etc.</li>
+</ul>
+
 <p><em>Alex Bradbury</em></p>
 
     </section>
