--- a/index.html
+++ b/index.html
@@ -196,6 +196,25 @@ foundation in good standing to use the RISC-V trademark (unless you are a
 non-profit).</li>
 </ul>
 
+<h2 id="an-update-on-lowrisc-alex-bradbury:1198e896ab6f8fa7b8bfab04cfcd8c73">An update on lowRISC: Alex Bradbury</h2>
+
+<ul>
+<li>Many thanks to the audience for all the questions. My slides are <a href="https://speakerdeck.com/asb/an-update-on-lowrisc">available
+here</a>.</li>
+<li>Unfortunately the SHAKTI project team from India have been caught up in the
+malfunctioning US State Department computer systems and so haven&rsquo;t been able
+to get visas to give their talk</li>
+</ul>
+
+<h2 id="compressed-extension-proposal-david-patterson:1198e896ab6f8fa7b8bfab04cfcd8c73">Compressed Extension Proposal: David Patterson</h2>
+
+<ul>
+<li>Looked at existing compressed instruction sets, and tried to simplify things
+and throw away ideas that add complexity but provide little benefit.</li>
+<li>Ended up with a specification that is pleasingly minimal, with each
+instruction decoding to a single RV32 instruction.</li>
+</ul>
+
 <p><em>Alex Bradbury</em></p>
 
     </section>
