--- a/index.html
+++ b/index.html
@@ -231,6 +231,21 @@ the minimal &lsquo;I&rsquo; instruction set, but could add it to the standard ex
 Linux.</li>
 </ul>
 
+<h1 id="goblincore64-a-risc-v-extension-for-data-intensive-computing-john-leideal:1198e896ab6f8fa7b8bfab04cfcd8c73">GoblinCore64. A RISC-V Extension for Data Intensive Computing: John Leideal</h1>
+
+<ul>
+<li>Building a processor design aimed at data intensive algorithms and
+applications. Applications tend to be very cache unfriendly.</li>
+<li>GC64 (Goblin Core) has a thread control unit. A very small micro-coded unit
+(e.g. implement RV64C) is microcoded to perform the contest switching task.</li>
+<li>Have added user-visible registers for thread id, thread context, task
+exception register etc etc.</li>
+<li>The GKEY supervisor register contains a 64-bit key loaded by the kernel. It
+determines whether a task may spawn and execute work on neighboring task
+processors, providing a very rudimentary protection mechanism.</li>
+<li>Making use of RV128I - it&rsquo;s not just there for fun!</li>
+</ul>
+
 <p><em>Alex Bradbury</em></p>
 
     </section>
