--- a/index.html
+++ b/index.html
@@ -161,6 +161,8 @@ throughout the day.</p>
 <ul>
 <li>Z-Scale is a family of tiny cores, similar in spirit to the ARM Cortex-M
 family. It integrates with the AHB-Lite interconnect.</li>
+<li>Contrast to Rocket (in-order cores, 64-bit, 32-bit, dual-issue options), and
+BOOM (a family of out-of-order cores).</li>
 </ul>
 
     </section>
