--- a/index.html
+++ b/index.html
@@ -203,6 +203,10 @@ written in Chisel.</li>
 <li>Chris argues there&rsquo;s been a general lack of effort in academia to build and
 evaluate out-of-order designs. As he points out, much research relies on
 software simulators with no area or power numbers.</li>
+<li>Some of the difficult questions for BOOM are which benchmarks to use, and
+how many cycles you need to run. He points out that mapping to FPGA running at
+50MHz, it would take around a day for the SPEC benchmarks for a cluster of
+FPGAs.</li>
 </ul>
 
     </section>
