--- a/community/index.html
+++ b/community/index.html
@@ -98,7 +98,7 @@
 <p>The best ways of keeping up with lowRISC developments are:</p>
 
 <ul>
-<li>Checking the <a href="blog">http://www.lowrisc.org</a>, and subscribing to the <a href="http://www.lowrisc.org/index.xml">RSS
+<li>Checking the <a href="/">blog</a>, and subscribing to the <a href="http://www.lowrisc.org/index.xml">RSS
 feed</a>.</li>
 <li>Signing up to our <a href="http://www.lowrisc.org/about/">announcement mailing list</a>.</li>
 <li>Following <a href="https://twitter.com/lowrisc">@lowRISC on Twitter</a>.</li>
