--- a/index.html
+++ b/index.html
@@ -179,6 +179,22 @@ designs for each canonical pipeline stage.</li>
 <li>For RISC-V FabScalar they have a unified physical register file and unified
 issue queue for floating point (so the FP ALU is treated like just another
 functional unit).</li>
+<li>FabScalar RISC-V will be released as an open source tool complete with
+uncore components and verification infrastructure. It will be available on
+GitHub in the fall.</li>
+<li>The license isn&rsquo;t yet decided, but there&rsquo;s a good chance it will be BSD.</li>
+</ul>
+
+<h2 id="aristotle-a-logically-determined-clockless-risc-v-rv32i-matthew-kim:1ef1186fa93d1e56b496df4f0f6ee20f">Aristotle. A Logically Determined (Clockless) RISC-V RV32I: Matthew Kim</h2>
+
+<ul>
+<li>Two logical values are defined. Data and null (not data). Then define
+threshold operators to produce &lsquo;null convention logic&rsquo;.</li>
+<li>See <a href="https://users.soe.ucsc.edu/~scott/papers/NCL2.pdf">here</a> for more on
+Null Convention Logic</li>
+<li>This results in a system built entirely of combinational logic. I couldn&rsquo;t
+hope to accurately summarise the work here. I&rsquo;m afraid you might be best off
+waiting for the recording.</li>
 </ul>
 
     </section>
