--- a/index.html
+++ b/index.html
@@ -239,6 +239,12 @@ I&rsquo;ll post the slides shortly.</li>
 <ul>
 <li>Support dynamic voltage and frequency scaling on-chip with no off-chip
 components.</li>
+<li>Want to switch all converters simultaneously to avoid charge sharing. The
+clock frequency adapts to track the voltage ripple.</li>
+<li>Raven has a RISC-V scalar core, vector accelerator. 16KB scalar instruction
+cache, 32KB shared data cache, and 8KB instruction cache. This has a 1.19mm^2
+area.</li>
+<li>The converter area is 0.19mm^2</li>
 </ul>
 
 <p><em>Alex Bradbury</em></p>
