--- a/index.html
+++ b/index.html
@@ -245,6 +245,19 @@ clock frequency adapts to track the voltage ripple.</li>
 cache, 32KB shared data cache, and 8KB instruction cache. This has a 1.19mm^2
 area.</li>
 <li>The converter area is 0.19mm^2</li>
+<li>The chip was wire-bonded on to a daughter-board, which was then connected to
+a larger motherboard connected to a Zedboard</li>
+<li>Converter transitions are less than 20ns, which allows extremely
+fine-grained DVFS.</li>
+<li>Raven3 showed 80% efficiency across a wide voltage range and achieved
+26GFLOPS/W using the on-chip conversion.</li>
+</ul>
+
+<h2 id="evaluating-risc-v-cores-for-pulp-an-open-parallel-ultra-low-power-platform-sven-stucki:1ef1186fa93d1e56b496df4f0f6ee20f">Evaluating RISC-V Cores for PULP. An Open Parallel Ultra-Low-Power Platform : Sven Stucki</h2>
+
+<ul>
+<li>Approximately 40 people working on PULP in some way</li>
+<li>Ultimate (ambitious) goal is one 1GOPS/mW (or 1pJ/op).</li>
 </ul>
 
 <p><em>Alex Bradbury</em></p>
