--- a/about/index.html
+++ b/about/index.html
@@ -141,6 +141,7 @@
 <li><a href="http://www.eecs.berkeley.edu/~krste/">Krste Asanovic (UC Berkeley)</a></li>
 <li><a href="http://juliusbaxter.net">Julius Baxter (OpenRISC)</a></li>
 <li><a href="http://en.wikipedia.org/wiki/Andrew_Huang">Bunnie Huang (Hacker)</a></li>
+<li><a href="https://www.moorcrofts.com/about/andrew-katz/">Andrew Katz (Moorcrofts LLP)</a></li>
 <li><a href="http://www.linkedin.com/pub/dominic-rizzo/28/3a6/b35">Dominic Rizzo (Google)</a></li>
 <li><a href="http://cseweb.ucsd.edu/~mbtaylor/">Michael Taylor (UCSD)</a></li>
 </ul>
