add Luca Benini to TAB

--- a/about/index.html
+++ b/about/index.html
@@ -140,6 +140,7 @@
 <ul>
 <li><a href="http://www.eecs.berkeley.edu/~krste/">Krste Asanovic (UC Berkeley)</a></li>
 <li><a href="http://juliusbaxter.net">Julius Baxter (OpenRISC)</a></li>
+<li><a href="http://www.iis.ee.ethz.ch/portrait/staff/lbenini.en.html">Luca Benini (ETH Zurich, University of Bologna)</a></li>
 <li><a href="http://en.wikipedia.org/wiki/Andrew_Huang">Bunnie Huang (Hacker)</a></li>
 <li><a href="https://www.moorcrofts.com/about/andrew-katz/">Andrew Katz (Moorcrofts LLP)</a></li>
 <li><a href="http://www.linkedin.com/pub/dominic-rizzo/28/3a6/b35">Dominic Rizzo (Google)</a></li>
