--- a/community/index.html
+++ b/community/index.html
@@ -9,7 +9,7 @@
         <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' type='text/css'>
         <link rel="stylesheet" href="http://www.lowrisc.org/libraries/normalize.3.0.1.css" />
         <link rel="stylesheet" href="http://www.lowrisc.org/css/liquorice.css" />
-        <link rel="shortcut icon" href="/favicon.ico" />
+        <link rel="shortcut icon" href="http://www.lowrisc.org/favicon.ico" />
         <link rel="alternate" href="http://www.lowrisc.org/index.xml" type="application/rss+xml" title="lowRISC" />
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -31,7 +31,7 @@
             <div class="sixteen columns">
                 <div class="li-brand li-left">
                 
-                <a href="http://www.lowrisc.org/"><img src="http://www.lowrisc.org/img/lowrisc_header_logo.png"/></a></div>
+                <a href="http://www.lowrisc.org"><img src="http://www.lowrisc.org/img/lowrisc_header_logo.png"/></a></div>
                 <div class="li-menu li-left">
                     <span class="li-menu-icon" onclick="javascript:toggle('menu');">&#9776;</span>
                     <ul id="menu2" class="li-menu-items">
@@ -75,6 +75,9 @@
 
 
 
+
+
+
     <div class="container">
         <div class="row">
             <div class="sixteen columns">
@@ -98,8 +101,7 @@
 <p>The best ways of keeping up with lowRISC developments are:</p>
 
 <ul>
-<li>Checking the <a href="/">blog</a>, and subscribing to the <a href="http://www.lowrisc.org/index.xml">RSS
-feed</a>.</li>
+<li>Checking the <a href="..">blog</a>, and subscribing to the <a href="http://www.lowrisc.org/index.xml">RSS feed</a>.</li>
 <li>Signing up to our <a href="http://www.lowrisc.org/about/">announcement mailing list</a>.</li>
 <li>Following <a href="https://twitter.com/lowrisc">@lowRISC on Twitter</a>.</li>
 </ul>
