--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' type='text/css'>
         <link rel="stylesheet" href="http://www.lowrisc.org/libraries/normalize.3.0.1.css" />
         <link rel="stylesheet" href="http://www.lowrisc.org/css/liquorice.css" />
-        <link rel="shortcut icon" href="/favicon.ico" />
+        <link rel="shortcut icon" href="http://www.lowrisc.org/favicon.ico" />
         <link rel="alternate" href="http://www.lowrisc.org/index.xml" type="application/rss+xml" title="lowRISC" />
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -31,7 +31,7 @@
             <div class="sixteen columns">
                 <div class="li-brand li-left">
                 
-                <a href="http://www.lowrisc.org/"><img src="http://www.lowrisc.org/img/lowrisc_header_logo.png"/></a></div>
+                <a href="http://www.lowrisc.org"><img src="http://www.lowrisc.org/img/lowrisc_header_logo.png"/></a></div>
                 <div class="li-menu li-left">
                     <span class="li-menu-icon" onclick="javascript:toggle('menu');">&#9776;</span>
                     <ul id="menu2" class="li-menu-items">
@@ -78,7 +78,7 @@
 		<div class="li-intro">
 			<p><b>lowRISC</b> is producing fully open hardware systems. From the processor core
 		    to the development board, our goal is to create a completely open computing
-		    eco-system. <b><a href="/about">Find out more</a></b></p>
+		    eco-system. <b><a href="http://www.lowrisc.org/about">Find out more</a></b></p>
 		</div>
 		<div class="li-main-article-list">
 		    <h1>Latest news</h1>
@@ -674,7 +674,7 @@ interconnect of choice for most existing open
 source IP cores, including most devices on
 <a href="http://opencores.org/">opencores.org</a>. The Berkeley
 <a href="https://github.com/ucb-bar/rocket-chip">Rocket</a> RISC-V implementation uses
-their own &lsquo;TileLink&rsquo; protocol (we provide a <a href="http://www.lowrisc.org/docs/tutorial/rocket-chip/">brief
+their own &lsquo;TileLink&rsquo; protocol (we provide a <a href="http://www.lowrisc.org/docs/tagged-memory-v0.1/rocket-chip/">brief
 overview</a>. By providing a
 reusable bridge, this project will allow the easy reuse of opencores devices
 and leverage the many man-years of effort that has already gone in to them.</li>
@@ -710,13 +710,13 @@ please do leave them in the comments.</p>
         <time class="li-article-date">Monday, April 13, 2015</time>
     </header>
     <section class="li-article-section">
-        <p>We&rsquo;re pleased to announce the <a href="http://www.lowrisc.org/docs/tutorial/">first lowRISC preview release</a>, demonstrating support for tagged memory as
+        <p>We&rsquo;re pleased to announce the <a href="http://www.lowrisc.org/docs/tagged-memory-v0.1/">first lowRISC preview release</a>, demonstrating support for tagged memory as
 described in <a href="http://www.lowrisc.org/docs/memo-2014-001-tagged-memory-and-minion-cores/">our memo</a>. Our ambition with lowRISC is to provide an open-source System-on-Chip
 platform for others to build on, along with low-cost development boards
 featuring a reference implementation. Although there&rsquo;s more work to be done on
 the tagged memory implementation, now seemed a good time to document what
 we&rsquo;ve done in order for the wider community to take a look. Please see our
-<a href="http://www.lowrisc.org/docs/tutorial/">full tutorial</a> which describes in some
+<a href="http://www.lowrisc.org/docs/tagged-memory-v0.1/">full tutorial</a> which describes in some
 detail the changes we&rsquo;ve made to the Berkeley <a href="https://github.com/ucb-bar/rocket">Rocket
 core</a>, as well as how you can build and try
 it out for yourself (either in simulation, or on an FPGA). We&rsquo;ve gone to some
