--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
         <title>lowRISC &middot; lowRISC</title>
         <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600' type='text/css'>
-        <link rel="stylesheet" href="http://www.lowrisc.org//libraries/normalize.3.0.1.css" />
-        <link rel="stylesheet" href="http://www.lowrisc.org//css/liquorice.css" />
-        <link rel="shortcut icon" href="http://www.lowrisc.org//favicon.ico" />
-        <link rel="alternate" href="http://www.lowrisc.org//index.xml" type="application/rss+xml" title="lowRISC" />
+        <link rel="stylesheet" href="http://www.lowrisc.org/libraries/normalize.3.0.1.css" />
+        <link rel="stylesheet" href="http://www.lowrisc.org/css/liquorice.css" />
+        <link rel="shortcut icon" href="http://www.lowrisc.org/favicon.ico" />
+        <link rel="alternate" href="http://www.lowrisc.org/index.xml" type="application/rss+xml" title="lowRISC" />
         <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -31,7 +31,7 @@
             <div class="sixteen columns">
                 <div class="li-brand li-left">
                 
-                <a href="http://www.lowrisc.org/"><img src="http://www.lowrisc.org//img/lowrisc_header_logo.png"/></a></div>
+                <a href="http://www.lowrisc.org"><img src="http://www.lowrisc.org/img/lowrisc_header_logo.png"/></a></div>
                 <div class="li-menu li-left">
                     <span class="li-menu-icon" onclick="javascript:toggle('menu');">&#9776;</span>
                     <ul id="menu2" class="li-menu-items">
@@ -78,7 +78,7 @@
 		<div class="li-intro">
 			<p><b>lowRISC</b> is producing fully open hardware systems. From the processor core
 		    to the development board, our goal is to create a completely open computing
-		    eco-system. <b><a href="http://www.lowrisc.org//about">Find out more</a></b></p>
+		    eco-system. <b><a href="http://www.lowrisc.org/about">Find out more</a></b></p>
 		</div>
 		<div class="li-main-article-list">
 		    <h1>Latest news</h1>
