typo fix in blog post

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ development boards. We would gladly welcome assistance in supporting other
 boards.</p>
 
 <p>Please note that the codebase temporarily lacks support for tagged memory
-included in the <a href="http://www.lowrisc.org/docs/tagged-memory-v0.1/">previous release</a> which describes in some We plan to re-integrate tagged memory support
+included in the <a href="http://www.lowrisc.org/docs/tagged-memory-v0.1/">previous release</a>. We plan to re-integrate tagged memory support
 with additional optimisations early next year. You can find a detailed list of
 changes in the <a href="http://www.lowrisc.org/docs/untether-v0.2/release/">release notes</a>.
 One highlight is support for <a href="http://www.lowrisc.org/docs/untether-v0.2/vsim/">RTL simulation using the open-source Verilator
