minor faq update

--- a/faq/index.html
+++ b/faq/index.html
@@ -103,8 +103,10 @@
 
 <h4 id="are-you-hiring:4a1318da06786ac52626178ca960109e">Are you hiring?</h4>
 
-<p>We aren&rsquo;t currently advertising to fill a position, but we&rsquo;re always
-interested in hearing from good people. Please send CVs to info@lowrisc.org.</p>
+<p>We hope to put out a job advert for a new member of the team at the University
+of Cambridge Computer Laboratory in early 2016. Interested applicants are
+encouraged to make informal enquiries about the post to Rob Mullins
+<a href="mailto:Robert.Mullins@cl.cam.ac.uk">Robert.Mullins@cl.cam.ac.uk</a>.</p>
 
 <h4 id="are-contract-or-remote-working-arrangements-on-offer:4a1318da06786ac52626178ca960109e">Are contract or remote working arrangements on offer?</h4>
 
@@ -127,9 +129,12 @@ interested in hearing from good people. Please send CVs to info@lowrisc.org.</p>
   However, it&rsquo;s useful to consider some of the main milestones:</p>
 
 <ul>
-<li><em>Release of an initial FPGA version:</em> we expect to do this in      the next 6 months, and then further development will be fully open to      the community.</li>
-<li><em>Production of a test chip:</em> we expect to tape out a test chip towards the end      of 2015.</li>
-<li><em>Tape out of production silicon:</em> this is likely to happen, at      the earliest, a year after the first test chip (in 2016).</li>
+<li><em>Release of an initial FPGA version:</em> Done! See the <a href="http://www.lowrisc.org/docs/tagged-memory-v0.1/">tagged memory
+release</a> and the <a href="http://www.lowrisc.org/docs/untether-v0.2/">untethered
+release</a>.</li>
+<li><em>Production of a test chip:</em> we expect to tape out a test chip during the
+course of 2016.</li>
+<li><em>Tape out of production silicon:</em> this is likely to happen, at      the earliest, a year after the first test chip (in 2017).</li>
 </ul>
 
 <h4 id="why-risc-v-and-not-openrisc-sparcv8-mips:4a1318da06786ac52626178ca960109e">Why RISC-V and not OpenRISC/SPARCv8/MIPS/&hellip;?</h4>
