update faq answer about contributing

--- a/faq/index.html
+++ b/faq/index.html
@@ -192,11 +192,13 @@ course of 2016.</li>
 
 <h4 id="how-can-i-contribute:4a1318da06786ac52626178ca960109e">How can I contribute?</h4>
 
-<p>In the coming months we will be launching mailing lists, a Wiki and of
-  course a source code repository to publicly coordinate development of the
-  project. This will include both hardware and software work. We hope to
-  have interesting, evidence-backed debates about implementation options out
-  in the open.</p>
+<p>We really appreciate contributions of code or ideas to our software and
+  hardware development efforts. Take a look at our mailing list and source
+  repos. See our <a href="http://www.lowrisc.org/community/">community page</a> for pointers to
+  our code repositories and development mailing lists. If you&rsquo;re looking for
+  ideas on where to start, perhaps look at our <a href="http://phab.lowrisc.org">Phabricator
+  instance</a> or introduce yourself on the mailing list
+  detailing your interests.</p>
 
                     </section>
                 </article>
