--- a/index.html
+++ b/index.html
@@ -115,6 +115,8 @@ code download.</li>
 the Foundation in good standing can use &ldquo;RISC-V&rdquo; and associated trandemarks,
 and only for devices that pass the tests in the open-source compatibility
 suites maintained by the Foundation.</li>
+<li>Drafting a new license for the ISA &lsquo;combining the best of BSD, GPL and so
+on&rsquo;.</li>
 </ul>
 
     </section>
