--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@ and only for devices that pass the tests in the open-source compatibility
 suites maintained by the Foundation.</li>
 <li>Drafting a new license for the ISA &lsquo;combining the best of BSD, GPL and so
 on&rsquo;.</li>
+<li>The Foundation will have a board of 7 directors elected by the members.</li>
 </ul>
 
     </section>
