--- a/index.html
+++ b/index.html
@@ -117,7 +117,12 @@ and only for devices that pass the tests in the open-source compatibility
 suites maintained by the Foundation.</li>
 <li>Drafting a new license for the ISA &lsquo;combining the best of BSD, GPL and so
 on&rsquo;.</li>
-<li>The Foundation will have a board of 7 directors elected by the members.</li>
+<li>The Foundation will have a board of 7 directors elected by the members. All
+members of committees must be members of the RISC-V Foundation.</li>
+<li>All details of the foundation are a work in progress. Feedback is welcome!</li>
+<li>16 member companies so far. Bluespec, Draper, Google, Hewlett Packard Labs,
+Microsemi, Oracle, SiFive, antmicro, codasip, Gray Research, Lattice
+Semiconductor, ROA logic, Rumble Development, Syntacore, Technolution</li>
 </ul>
 
     </section>
