--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ all parties.</li>
 <li>The compatibility test suites shall always be publicly available as a source
 code download.</li>
 <li>To protect the standard, only members (with commercial RISC-V products) of
-the Foundation in good standing can use &ldquo;RISC-V&rdquo; and associated trandemarks,
+the Foundation in good standing can use &ldquo;RISC-V&rdquo; and associated trademarks,
 and only for devices that pass the tests in the open-source compatibility
 suites maintained by the Foundation.</li>
 <li>Drafting a new license for the ISA &lsquo;combining the best of BSD, GPL and so
@@ -123,6 +123,14 @@ members of committees must be members of the RISC-V Foundation.</li>
 <li>16 member companies so far. Bluespec, Draper, Google, Hewlett Packard Labs,
 Microsemi, Oracle, SiFive, antmicro, codasip, Gray Research, Lattice
 Semiconductor, ROA logic, Rumble Development, Syntacore, Technolution</li>
+</ul>
+
+<h2 id="risc-v-updates-krste-asanovic:404bdd89395af7de00a88d5e9af98f5d">RISC-V Updates: Krste Asanovic</h2>
+
+<ul>
+<li>The 1.9 version of the compressed extension is on track to become frozen and
+become blessed as v2.0. Now is the time to speak up if you have any feedback
+or concerns!</li>
 </ul>
 
     </section>
