--- a/index.html
+++ b/index.html
@@ -146,6 +146,10 @@ master&rsquo;s thesis) and user-level DMA (copying data between DRAM and VLS
 directly).</li>
 <li>New Berkeley open-source cores: BOOM out-of-order implementation and V-Scale
 (verilog implementation of Z-Scale).</li>
+<li>RISC-V is being transitioned out of Berkeley. This involves upstreaming of
+tools and the RISC-V Foundation taking over the standards process.</li>
+<li>SiFive has been founded by some of the lead RISC-V developers (Krste
+Asanovic, Yunsup Lee, Andrew Waterman). Sutter Hill Ventures have invested.</li>
 </ul>
 
     </section>
