--- a/index.html
+++ b/index.html
@@ -190,6 +190,9 @@ of what gdb can do.</li>
 <li>Question: how does the tracing scale? Hasn&rsquo;t be investigated yet.</li>
 <li>Question: will support be integrated into the BOOM codebase? Answer: not
 currently planned.</li>
+<li>Question: there&rsquo;s a wide spectrum of functionality that different
+implementations could implement. Is there a discovery mechanism for the
+functionality that is supported? Yes.</li>
 </ul>
 
     </section>
