--- a/index.html
+++ b/index.html
@@ -233,6 +233,8 @@ for area-efficiency on FPGA.</li>
 <li>The network is implemented using the <a href="https://github.com/LBL-CoDEx/OpenSoCFabric">OpenSoC
 fabric</a> (open source and in
 chisel). AHB endpoints have now beed added and AXI is in-development.</li>
+<li>A 96-core system was constructed using multiple FPGAs.</li>
+<li>For more info, see <a href="http://www.codexhpc.org/">CoDEx HPC</a>.</li>
 </ul>
 
     </section>
