--- a/index.html
+++ b/index.html
@@ -237,6 +237,19 @@ chisel). AHB endpoints have now beed added and AXI is in-development.</li>
 <li>For more info, see <a href="http://www.codexhpc.org/">CoDEx HPC</a>.</li>
 </ul>
 
+<h2 id="grvi-phalanx-a-massively-parallel-risc-v-fpga-accelerator-jan-gray:404bdd89395af7de00a88d5e9af98f5d">GRVI Phalanx. A massively parallel RISC-V FPGA accelerator: Jan Gray</h2>
+
+<ul>
+<li>GRVI is pronounced &lsquo;groovy&rsquo;.</li>
+<li>There&rsquo;s lots of interest in FPGA accelerators right now (Altera acquisition,
+MSR&rsquo;s catapult).</li>
+<li>FPGAs are an interesting platform. Massively parallel. Specialized.<br />
+Connected. High throughput. Low latency. The big barrier is of course porting
+your software. Jan argues OpenCL for FPGAs is a major breakthrough for this
+problem, if you&rsquo;re lucky enough to have an application that can be expressed
+in OpenCL.</li>
+</ul>
+
     </section>
     <footer>
         <a href='http://www.lowrisc.org/blog/2016/01/third-risc-v-workshop-day-one'>More</a>
