--- a/index.html
+++ b/index.html
@@ -276,6 +276,13 @@ potential bridge to Chisel RISC-V infrastructure?</li>
 licensing model.</li>
 </ul>
 
+<h2 id="coreboot-on-risc-v-ron-minnich:404bdd89395af7de00a88d5e9af98f5d">Coreboot on RISC-V: Ron Minnich</h2>
+
+<ul>
+<li>Initializing the stuff outside the main CPU on a chromebook takes about 1
+billion instructions before it can start Linux.</li>
+</ul>
+
     </section>
     <footer>
         <a href='http://www.lowrisc.org/blog/2016/01/third-risc-v-workshop-day-one'>More</a>
