--- a/index.html
+++ b/index.html
@@ -290,6 +290,15 @@ SMP capable on x86.</li>
 indistinguishable from a persistent embedded threat. Ron&rsquo;s preference is the
 platform management code run as a kernel thread. Minion cores are ideal for
 this (Ron&rsquo;s words, not mine!).</li>
+<li>coreboot is a GPLv2 BIOS replacement (not a bootloader). It has multiple
+possible payloads including SeaBIOS and depthcharge (used for verified boot on
+Chromebooks).</li>
+<li>Port was started in October 2014 as a side project. The effort resumed in
+July 2015 with the privileged spec, and as-of September is up and running
+again. The most recent port runs on Spike but not QEMU (due to lack of support
+for the privileged spec).</li>
+<li>RISC-V is a first class citizen in coreboot, all commits must pass tests for
+the RISC-V buildbot.</li>
 </ul>
 
     </section>
